<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="efp__app_name">ExFilePicker</string>
    <string name="efp__action_grid">Grid</string>
    <string name="efp__action_list">List</string>

    <string-array name="efp__size_units">
        <item>B</item>
        <item>kb</item>
        <item>mb</item>
        <item>gb</item>
        <item>tb</item>
        <item>pb</item>
    </string-array>

    <string name="efp__empty_directory">No Files in This directory</string>
    <string name="efp__action_select_all">Select all</string>
    <string name="efp__action_deselect">Deselect</string>
    <string name="efp__action_invert_selection">Invert selection</string>
    <string name="efp__new_folder">New folder</string>
    <string name="efp__folder_name_hint">Folder name</string>
    <string name="efp__folder_created">Folder created successfully</string>
    <string name="efp__folder_not_created">Error! Folder isn\'t created</string>
    <string name="efp__folder_already_exists">Folder already exists</string>
    <string name="efp__sort">Sort</string>
    <string name="efp__storage">Storage</string>

    <string-array name="efp__sorting_types">
        <item>By name, ascending</item>
        <item>By name, descending</item>
        <item>By size, ascending</item>
        <item>By size, descending</item>
        <item>By date, ascending</item>
        <item>By date, descending</item>
    </string-array>

</resources>