<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/sort"
        android:icon="?attr/xtp_srtt"
        android:title="@string/efp__sort"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/storage"
        android:icon="?attr/xtp_dstr"
        android:title="@string/efp__storage"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/new_folder"
        android:icon="?attr/xtp_fld_nw"
        android:title="@string/efp__new_folder"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/change_view"
        android:icon="?attr/xtp_grd"
        android:title="@string/efp__action_grid"
        app:showAsAction="always"/>

    <item
        android:id="@+id/ok"
        android:icon="?attr/xtp_ko"
        android:title="@android:string/ok"
        app:showAsAction="always"/>
</menu>
